# django-svelte-start

./: .editorconfig  .eslintrc.json  .gitattributes  .gitignore  .markdown-link-check.json  .pre-commit-config.yaml  README.md  build.js  eslint.config.js  package-lock.json  package.json  postcss.config.cjs  pyproject.toml  setup.cfg  webpack.config.js
.github/workflows/: pre-commit-autoupdate.yml  pre-commit.yml  prek-autoupdate.yml  prek.yml  update-copyright-years-in-license-file.yml
backend/: asgi.py  settings.py  urls.py  wsgi.py
frontend/public/templates/: index.html
frontend/src/css/: index.css
frontend/src/js/: App.svelte  Main.svelte  index.js
