[metadata]
name = django_svelte_start
version = 0.0.1
description = Django + Svelte starting template.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mondeja/django-svelte-start
author = Álvaro Mondéjar Rubio
author_email = mondejar1994@gmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
project_urls =
    Documentation=https://github.com/mondeja/django-svelte-start#readme
    Source=https://github.com/mondeja/django-svelte-start
    Issue Tracker=https://github.com/mondeja/django-svelte-start/issues

[options]
packages = backend
install_requires =
    Django==3.2.5
python_requires = >=3.6

[options.extras_require]
dev =
    black==20.8b1
    bump2version==1.0.1
    flake8==4.0.1
    flake8-implicit-str-concat==0.2.0
    flake8-print==4.0.0
    isort==5.10.0
    yamllint==1.26.3
lint =
    black==20.8b1
    flake8==4.0.1
    flake8-implicit-str-concat==0.2.0
    flake8-print==4.0.0
    isort==5.10.0
    yamllint==1.26.3

[flake8]
max-line-length = 88
extend-ignore =
    E203,
    W503

[isort]
lines_after_imports = 2
multi_line_output = 3
line_length = 88
use_parentheses = True
combine_as_imports = True
include_trailing_comma = True
known_tests = tests
sections = STDLIB,THIRDPARTY,FIRSTPARTY,TESTS,LOCALFOLDER
